# alis-bot-rs

./: Cargo.toml  README.md  config.toml  example_config.toml
.github/workflows/: build.yml  tests.yml
src/: lib.rs  main.rs
