[package]
name = "alis-bot-rs"
version = "0.1.0"
authors = ["precambrien <precambrien@protonmail.com>"]
edition = "2018"
description = "An IRC bot mimicking libera chat's alis service (advanced channel listing)"
license = "Beerware"
keywords = ["irc", "bot", "alis"]


[dependencies]
irc = "0.15"
tokio = { version = "1.0.0", features = ["full"] }
futures = "0.3.0"
log = "0.4.13"
env_logger = "0.8.2"
glob = "0.3.0"
lazy_static = "1.4.0"
clap = "3.0.0-beta.2"
tempfile = "3.2.0"
failure = "0.1.8"
itertools = "0.10.0"
